--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,3 +12,12 @@ jobs:
     - name: Install dependencies
       run: |
         make install
+    - name: Run the linter
+      run: |
+        make lint
+    - name: Run tests
+      run: |
+        make test
+    - name: Format
+      run: |
+        make format
